tests/neg-custom-args/captures/heal-tparam-cs.check
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:15:13 -------------------------------
15 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^) ->? () ->{x$0} Unit
   |    Required: (c: Capp^) -> () ->{localcap} Unit
   |
   |    Note that the existential capture root in () => Unit
   |    cannot subsume the capability x$0.type
16 |      (c1: Capp^) => () => { c1.use() }
17 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:25:13 -------------------------------
25 |    localCap { c =>  // error
   |    ^
   |    Found:    (x$0: Capp^{io}) ->? () ->{x$0} Unit
   |    Required: (c: Capp^{io}) -> () ->{net} Unit
26 |      (c1: Capp^{io}) => () => { c1.use() }
27 |    }
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:41:10 -------------------------------
41 |    io => () => io.use()  // error
   |          ^^^^^^^^^^^^^^
   |          Found:    () ->{io} Unit
   |          Required: () ->? Unit
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:44:10 -------------------------------
44 |    io => () => io.use()  // error
   |          ^^^^^^^^^^^^^^
   |          Found:    () ->{io} Unit
   |          Required: () ->? Unit
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg-custom-args/captures/heal-tparam-cs.scala:10:14 ----------------------------------------------------
10 |  val test1 = localCap { c => // error
   |              ^^^^^^^^
   |              local reference c leaks into outer capture set of type parameter T of method localCap
